--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,10 @@
-fastapi
-uvicorn
-pyserial
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pyserial==3.5
+python-multipart==0.0.6
+Pillow==10.1.0
+opencv-python-headless==4.8.1.78
+numpy==1.24.3
+python-dotenv==1.0.0
+websockets==12.0
+aiofiles==23.2.1
