--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -8,5 +8,5 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 COPY . .
 
-CMD ["python", "-m", "debugpy", "--listen", "0.0.0.0:5678", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["python", "-Xfrozen_modules=off", "-m", "debugpy", "--listen", "0.0.0.0:5678", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
