Refactor project management UI and backend: replace GraphPreparation with EditProject, streamline project selection, and enhance file handling capabilities including SVG to G-code conversion and project file deletion.

--- a/backend/requirements-windows.txt
+++ b/backend/requirements-windows.txt
@@ -11,6 +11,7 @@ numpy==1.24.3
 python-dotenv==1.0.0
 websockets==12.0
 aiofiles==23.2.1
+vpype[all]==1.15.0
 
 # Alternative packages for Windows (uncomment if needed)
 # opencv-python==4.8.1.78
