Update requirements for backend and Windows: upgrade NumPy to version 1.26+ for Python 3.12 compatibility and add vpype-gcode for G-code export functionality.

--- a/backend/requirements-windows.txt
+++ b/backend/requirements-windows.txt
@@ -7,11 +7,14 @@ pyserial==3.5
 python-multipart==0.0.6
 Pillow==10.1.0
 opencv-python-headless==4.8.1.78
-numpy==1.24.3
+# NumPy 1.26+ supports Python 3.12 and vpype dependencies
+numpy>=1.26,<2.0
 python-dotenv==1.0.0
 websockets==12.0
 aiofiles==23.2.1
 vpype[all]==1.15.0
+# Adds gcode export command for vpype
+vpype-gcode>=0.10.0
 
 # Alternative packages for Windows (uncomment if needed)
 # opencv-python==4.8.1.78
