--- a/py-compse.yml
+++ b/py-compse.yml
@@ -24,7 +24,7 @@ services:
     networks:
       - polarvortex-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5173"]
+      test: ["CMD", "curl", "-f", "http://frontend:5173"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -68,7 +68,7 @@ services:
     networks:
       - polarvortex-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://backend:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
