--- a/env.example
+++ b/env.example
@@ -4,8 +4,8 @@ APP_VERSION=0.1.0
 DEBUG=false
 
 # Frontend Settings
-VITE_API_BASE_URL=http://localhost:8000
-VITE_WS_BASE_URL=ws://localhost:8000
+VITE_API_BASE_URL=http://backend:8000
+VITE_WS_BASE_URL=ws://backend:8000
 
 # Backend Settings
 BACKEND_HOST=0.0.0.0
@@ -27,6 +27,7 @@ MAX_FILE_SIZE=10485760  # 10MB
 
 # Security
 SECRET_KEY=your-secret-key-here-change-in-production
+# Update CORS_ORIGINS for your deployment host (e.g., http://<pi-ip>)
 CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # Logging
