--- a/docker-compose.rpi.yml
+++ b/docker-compose.rpi.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -60,6 +58,7 @@ services:
       - env.example
     devices:
       - /dev/ttyACM0:/dev/ttyACM0  # Alternative Linux Arduino port
+    privileged: true
     networks:
       - polarvortex-network
     healthcheck:
