--- a/docker-compose.rpi.prod.yml
+++ b/docker-compose.rpi.prod.yml
@@ -56,6 +56,9 @@ services:
       - .env.production
     devices:
       - /dev/ttyACM0:/dev/ttyACM0
+    privileged: true
+    group_add:
+      - dialout
     networks:
       - polarvortex-network
     healthcheck:
