--- a/docker-compose.rpi.yml
+++ b/docker-compose.rpi.yml
@@ -59,6 +59,8 @@ services:
     devices:
       - /dev/ttyACM0:/dev/ttyACM0  # Alternative Linux Arduino port
     privileged: true
+    group_add:
+      - dialout
     networks:
       - polarvortex-network
     healthcheck:
