--- a/docker-compose.rpi.yml
+++ b/docker-compose.rpi.yml
@@ -61,6 +61,8 @@ services:
     privileged: true
     group_add:
       - dialout
+    device_cgroup_rules:
+      - 'c 166:* rmw'
     networks:
       - polarvortex-network
     healthcheck:
