more permission errors

--- a/docker-compose.rpi.prod.yml
+++ b/docker-compose.rpi.prod.yml
@@ -62,6 +62,7 @@ services:
     device_cgroup_rules:
       - 'c 166:* rmw'
     user: root
+    userns_mode: host
     networks:
       - polarvortex-network
     healthcheck:
