--- a/docker-compose.rpi.yml
+++ b/docker-compose.rpi.yml
@@ -63,6 +63,7 @@ services:
       - dialout
     device_cgroup_rules:
       - 'c 166:* rmw'
+    userns_mode: host
     networks:
       - polarvortex-network
     healthcheck:
