--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 COPY requirements.txt ./
-RUN pip install -r requirements-dev.txt
+RUN pip install -r requirements.txt
 COPY . .
 
 # Create non-root user for security
