--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,8 @@ Pillow==10.1.0
 opencv-python-headless==4.8.1.78
 # NumPy 1.26+ supports Python 3.12 and keeps vpype deps happy
 numpy>=1.26,<2.0
+scipy>=1.11.0
+scikit-image>=0.22.0
 python-dotenv==1.0.0
 websockets==12.0
 aiofiles==23.2.1
