--- a/.github/workflows/ai-issue-handler.yml
+++ b/.github/workflows/ai-issue-handler.yml
@@ -111,6 +111,7 @@ jobs:
           echo "AI will handle this issue"
 
       - name: Create feature branch
+        if: steps.issue_info.outputs.is_ai_assigned == 'true'
         id: create_branch
         run: |
           ISSUE_NUM="${{ steps.issue_info.outputs.issue_number }}"
@@ -176,6 +177,7 @@ jobs:
           echo "Created/checked out branch: $BRANCH_NAME"
 
       - name: Install dependencies
+        if: steps.issue_info.outputs.is_ai_assigned == 'true'
         run: |
           python -m pip install --upgrade pip
           if [ -f backend/requirements.txt ]; then
@@ -185,6 +187,7 @@ jobs:
           pip install openai anthropic requests
 
       - name: Process issue with AI
+        if: steps.issue_info.outputs.is_ai_assigned == 'true'
         id: ai_process
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
@@ -209,7 +212,8 @@ jobs:
           git push origin "${{ steps.create_branch.outputs.branch_name }}"
 
       - name: Create Pull Request
-        if: steps.ai_process.outputs.has_changes == 'true'
+        if: steps.issue_info.outputs.is_ai_assigned == 'true' && steps.ai_process.outputs.has_changes == 'true'
+        id: create_pull_request
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -286,14 +290,14 @@ jobs:
             }
 
       - name: Update issue status
-        if: always()
+        if: always() && steps.issue_info.outputs.is_ai_assigned == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const issueNumber = '${{ steps.issue_info.outputs.issue_number }}';
             const hasChanges = '${{ steps.ai_process.outputs.has_changes }}' === 'true';
-            const prUrl = '${{ steps.create_branch.outputs.branch_name }}';
+            const prUrl = '${{ steps.create_pull_request.outputs.pr_url }}';
 
             if (hasChanges) {
               await github.rest.issues.addLabels({
