Add occult feature for hidden line removal in G-code generation
- Introduced new options in SvgToGcodeRequest and the convert_svg_to_gcode function to enable hidden line removal using vpype-occult.
- Updated the EditProject component to include UI controls for occult settings, allowing users to customize hidden line removal behavior.
- Enhanced G-code header comments to reflect occult settings when enabled, improving user awareness of the applied configurations.

--- a/backend/requirements-windows.txt
+++ b/backend/requirements-windows.txt
@@ -15,6 +15,8 @@ aiofiles==23.2.1
 vpype[all]==1.15.0
 # Adds gcode export command for vpype
 vpype-gcode>=0.10.0
+# Adds hidden line removal (occult) command for vpype
+vpype-occult>=0.4.0
 
 # Alternative packages for Windows (uncomment if needed)
 # opencv-python==4.8.1.78
