--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,5 +16,7 @@ PyYAML==6.0.1
 vpype[all]==1.15.0
 # Adds gcode export command for vpype
 vpype-gcode>=0.10.0
+# Adds hidden line removal (occult) command for vpype
+vpype-occult>=0.4.0
 svgpathtools==1.6.1
 cairosvg>=2.7.0
