--- a/docker-compose.rpi.yml
+++ b/docker-compose.rpi.yml
@@ -52,6 +52,8 @@ services:
       - BACKEND_PORT=8000
       - DEBUG=true
       - LOG_LEVEL=DEBUG
+      # Prefer stable by-id path; fallback to ttyACM0
+      - ARDUINO_PORTS=/dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_18FF601AAE299828528F78F9F5001E87-if00,/dev/ttyACM0
       - CORS_ORIGINS=http://192.168.11.205:5173,http://localhost:5173
       - WATCHFILES_FORCE_POLLING=true
     env_file:
