--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 services:
   frontend:
-    build: 
+    build:
       context: ./frontend
       dockerfile: Dockerfile.dev
     ports:
-      - "5173:5173"  # Vite dev server port
-      - "9229:9229"  # Node debug port
+      - "5173:5173" # Vite dev server port
+      - "9229:9229" # Node debug port
     volumes:
       - ./frontend:/app
-      - /app/node_modules  # Preserve node_modules in container
+      - /app/node_modules # Preserve node_modules in container
     environment:
       - NODE_ENV=development
       - VITE_API_BASE_URL=http://localhost:8000
@@ -24,7 +24,7 @@ services:
     networks:
       - polarvortex-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5173"]
+      test: [ "CMD", "curl", "-f", "http://localhost:5173" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -37,12 +37,12 @@ services:
         max-file: "3"
 
   backend:
-    build: 
+    build:
       context: ./backend
       dockerfile: Dockerfile.dev
     ports:
       - "8000:8000"
-      - "5678:5678"  # Python debugger
+      - "5678:5678" # Python debugger
     volumes:
       - ./backend:/app
       - ./backend/local_storage:/app/local_storage
@@ -53,23 +53,24 @@ services:
       - BACKEND_PORT=8000
       - DEBUG=true
       - LOG_LEVEL=DEBUG
+      # Prefer stable by-id path; fallback to ttyACM0
+      - ARDUINO_PORTS=/dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_18FF601AAE299828528F78F9F5001E87-if00,/dev/ttyACM0
       # Enable better file watching for hot-reload
       - WATCHFILES_FORCE_POLLING=true
     env_file:
       - env.example
     # Serial port device access
-    # For Linux: Uncomment and adjust device path (e.g., /dev/ttyUSB0, /dev/ttyACM0)
-    # For Windows Docker Desktop: Use COM port mapping (see instructions below)
-    # devices:
-      # - /dev/ttyUSB0:/dev/ttyUSB0  # Common Linux Arduino port
-      # - /dev/ttyACM0:/dev/ttyACM0  # Alternative Linux Arduino port
-    # Alternative: Use privileged mode if device access issues occur
-    # privileged: true
+    # For Linux: Set by-id path if available for stability across reconnects.
+    devices:
+      - /dev/ttyACM0:/dev/ttyACM0 # Common Marlin CDC device
+      - /dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_18FF601AAE299828528F78F9F5001E87-if00:/dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_18FF601AAE299828528F78F9F5001E87-if00
+    # Use privileged mode so reconnects show without container restart
+    privileged: true
     # Or add user to dialout group (Linux) - requires modifying Dockerfile
     networks:
       - polarvortex-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -81,8 +82,6 @@ services:
         max-size: "10m"
         max-file: "3"
 
-
 networks:
   polarvortex-network:
     driver: bridge
-
