--- a/docker-compose.rpi.yml
+++ b/docker-compose.rpi.yml
@@ -60,6 +60,10 @@ services:
       - env.example
     devices:
       - /dev/ttyACM0:/dev/ttyACM0 # Alternative Linux Arduino port
+      - /dev/ttyACM1:/dev/ttyACM1
+      - /dev/ttyACM2:/dev/ttyACM2
+      - /dev/ttyACM3:/dev/ttyACM3
+      - /dev/ttyACM4:/dev/ttyACM4
       - /dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_18FF601AAE299828528F78F9F5001E87-if00:/dev/serial/by-id/usb-marlinfw.org_Marlin_USB_Device_18FF601AAE299828528F78F9F5001E87-if00
     privileged: true
     group_add:
