Update Windows setup files to replace outdated Python package dependencies with newer versions, including scipy, scikit-image, PyYAML, and cairosvg.

--- a/backend/requirements-windows.txt
+++ b/backend/requirements-windows.txt
@@ -9,10 +9,10 @@ Pillow==10.1.0
 opencv-python-headless==4.8.1.78
 # NumPy 1.26+ supports Python 3.12 and vpype dependencies
 numpy>=1.26,<2.0
-python-dotenv==1.0.0
-websockets==12.0
-aiofiles==23.2.1
-vpype[all]==1.15.0
+scipy>=1.11.0
+scikit-image>=0.22.0
+PyYAML==6.0.1
+vpype==1.15.0
 # Adds gcode export command for vpype
 vpype-gcode>=0.10.0
 # Adds hidden line removal (occult) command for vpype
@@ -22,3 +22,4 @@ vpype-occult>=0.4.0
 # opencv-python==4.8.1.78
 # numpy==1.24.3
 svgpathtools==1.6.1
+cairosvg>=2.7.0
