Add Terrain SVG generation feature and update dependencies
- Implemented Terrain SVG generation API endpoint in the backend.
- Added Terrain SVG dialog in the frontend for user interaction.
- Updated Python dependencies to include httpx version 0.27.2.
- Modified setup files for Windows and development environments to reflect new package requirements.
- Enhanced EditProject component with new Terrain SVG functionality.

--- a/env.production.example
+++ b/env.production.example
@@ -30,6 +30,10 @@ CORS_ORIGINS=http://localhost,http://your-domain.com
 LOG_LEVEL=WARNING
 LOG_FILE=./logs/app.log
 
+# Mapbox
+MAPBOX_TOKEN=
+VITE_MAPBOX_TOKEN=
+
 # Production Settings
 NODE_ENV=production
 PYTHONPATH=/app
