--- a/backend/requirements-windows.txt
+++ b/backend/requirements-windows.txt
@@ -11,6 +11,7 @@ opencv-python-headless==4.8.1.78
 numpy>=1.26,<2.0
 scipy>=1.11.0
 scikit-image>=0.22.0
+httpx==0.27.2
 PyYAML==6.0.1
 vpype==1.15.0
 # Adds gcode export command for vpype
