--- a/env.example
+++ b/env.example
@@ -34,6 +34,10 @@ CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 LOG_LEVEL=INFO
 LOG_FILE=./logs/app.log
 
+# Mapbox
+MAPBOX_TOKEN=
+VITE_MAPBOX_TOKEN=
+
 # Development Settings
 NODE_ENV=development
 PYTHONPATH=/app
