--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "mapbox-gl": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
